src/styles/projects.sass
#projects
    background: #edf1f5

.card
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23)

.card-body
    background-color: #f8f9fa

.card-title
    color: #525f7f

.card-text
    color: #525f7f

